# financeflow

./: .ENV.LOCAL  .env.example  .env.production.example  .eslintignore  .eslintrc.json  .firebaserc  .gitignore  .vercelignore  LICENSE  PROJECT_BRAIN.md  README.md  changelog.md  next.config.js  package-lock.json  package.json  presaleindex  server.js  tailwind.config.js  tokenlauncher.ts  tokenvoted.tsx  tsconfig.json  vscode-profile-2023-07-06-22-51-00.cpuprofile  wagmi documentation.txt
api/: proxy.js
components/: AdminLogin.js  ContactUs.js  Discover.jsx  DynamicWalletButton.tsx  FadeOnScroll.jsx  FinanceFlowWhitepaper.tsx  Footer.js  Footer.tsx  LoadingIndicator.jsx  Magic-pump-invitation.tsx  Modal.js  ModalApp.tsx  Navbar.tsx  NavbarWalletButton.tsx  Navbarwhitepaper.tsx  Participation-funnel.tsx  PresaleInstructions.tsx  PriceLineChart.jsx  ProjectDetails.tsx  ProjectList.tsx  ProjectValidation.tsx  StatsDropdown.tsx  TestFirebaseStorage.tsx  TokenGrid.jsx  Welcome.tsx  Whitepaper.jsx  Whitepaper.tsx  Widget.tsx  WidgetNavbar.tsx  main.js
config/: index.js
constant/: FlattenedSimpleToken.sol  (+1 more)
solana/levi-dice-program/programs/levi-dice/: Cargo.toml
solana/levi-dice-program/programs/levi-dice/src/: constants.rs  errors.rs  lib.rs
solana/levi-dice-program/programs/levi-dice/src/instructions/: cancel_game.rs  commit_roll.rs  create_game.rs  forfeit_timeout.rs  initialize_config.rs  join_game.rs  mod.rs  reveal_roll.rs  settle_game.rs  start_game.rs  token_helpers.rs
solana/levi-dice-program/programs/levi-dice/src/state/: config.rs  game.rs  mod.rs
(+285 files in other folders)
